clean up routes, add filters for getallprojects method and create linked candidateproject on creating project
